# discord-bot

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .pylintrc.test  AGENTS.md  Agents.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  KNOWN-ISSUES.md  LICENSE  MESSAGING.md  README.md  README.rst  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  renovate.json  requirements-ytdlp.txt  requirements.base.txt  requirements.dispatcher.txt  requirements.download_worker.txt  requirements.postgres.txt  requirements.txt  run_bot.py  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build_check.yml  cd.yml  ci.yml  coverage-upload.yml  dependabot.yml  docker_push.yml  tag_build.yml
albemic/: env.py
alembic/: env.py
alembic/versions/: 0a3945d3e28b_add_storage_to_cache_db.py  0f696315a882_added_object_storage_backup_table.py  491790be3ce3_add_video_analytics_table.py  4c68f4df56dd_add_file_size_column.py  5b627533b326_removing_search_cache_client.py  782e85c600ba_add_video_analytics_table.py  805bae71a46e_remove_user_id_and_batch_id_from_video_.py  86418d6f1ce3_remove_video_cache_guild_table.py  a399ba3deb56_change_ids_from_strings_to_integers.py  bf20d91d337c_add_timezone_awareness_to_timestamps.py  bf24a336d155_initial_migration.py  c7ea05bb7aa3_add_video_request_analytics_table.py  faa6198cbed2_add_days_column_to_video_analytics.py
discord_bot/: .pylintrc  __init__.py  cli.py  common.py  database.py  defaults.py  exceptions.py  functions.py  run_bot.py  setup.py  tox.ini  utils.py  youtube.py
discord_bot/cli/: __init__.py  bot.py  broker.py  cog_registry.py  common.py  db.py  db_backup.py  dispatcher.py  download_worker.py  full.py  main.py
discord_bot/clients/: broker_client.py  dispatch_client_base.py  http_client_base.py  http_dispatch_client.py  redis_client.py
discord_bot/cogs/: cog_helper.py  common.py  database_backup.py  delete_messages.py  error.py  general.py  markov.py  message_dispatcher.py  music.py  role.py  schema.py  twitter.py  urban.py  youtube.py
discord_bot/discord_bot/: database.py  defaults.py  discord_cli.py  exceptions.py  functions.py  run_bot.py  twitter.py  utils.py  youtube.py
discord_bot/interfaces/: broker_protocols.py  dispatch_protocols.py
discord_bot/servers/: base.py  broker_server.py  dispatch_health_server.py  dispatch_server.py  health_server.py  health_server_base.py
discord_bot/types/: catalog.py  cleanup_reason.py  dispatch_request.py  dispatch_result.py  download.py  fetched_message.py  history_playlist_item.py  media_download.py  media_request.py  playlist_add_request.py  playlist_add_result.py  queue.py  search.py
discord_bot/utils/: audio.py  broker_client.py  broker_http_server.py  circuit_breaker.py  common.py  database_backup_client.py  discord_cache.py  discord_retry.py  discord_utils.py  dispatch_client_base.py  dispatch_envelope.py  dispatch_helpers.py  dispatch_queue.py  distributed_queue.py  download_queue.py  download_stream_helpers.py  failure_queue.py  health_server.py  http_client_base.py  http_dispatch_client.py  instrument.py  memory_profiler.py  otel.py  process_metrics.py  queue.py  redis_client.py  redis_dispatch_client.py  redis_stream_helpers.py  (+1 more)
docker/: .env.example  Dockerfile  Dockerfile.bot  Dockerfile.broker  Dockerfile.dispatcher  Dockerfile.download_worker  README.md  discord.cnf.example  docker-compose.multiprocess.yml  docker-compose.yml  entrypoint.sh  release.txt
docs/: cli.md  common.md  database_backup.md  delete_messages.md  docker.md  ha-queue.md  ha.md  markov.md  message_dispatcher.md  music.md  role.md  urban.md
scripts/: README_RESTORE.md  restore_database.py
tests/: conftest.py  helpers.py  requirements.txt  start_postgres_for_ci.sh  test_cli.py  test_database.py  test_run_bot.py  test_utils.py
(+190 files in other folders)
